# jaxlob2

./: README.md  pyproject.toml
jaxlob2/: dataloader.py  job.py  optimal_execution.py
scripts/: setup_dev.sh
